service tests update